--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,6 +32,16 @@
         }
       }(window.location))
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNL1DSVRV5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      /* Capture the full URL so GA picks up any utm_* parameters */
+      gtag('config', 'G-GNL1DSVRV5', { page_location: window.location.href });
+    </script>
   </head>
 
   <body>
@@ -40,5 +49,33 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+
+    <script>
+    /**
+     * Auto-appends ?utm_source=... to any anchor that includes
+     *   data-utm-source="<value>"
+     * Example:
+     *   <a class="btn" data-utm-source="tiktok" href="/">Download</a>
+     * becomes
+     *   https://prop.evtrades.com/?utm_source=tiktok
+     */
+    (() => {
+      const BASE = 'https://prop.evtrades.com/';
+      document.querySelectorAll('a[data-utm-source]').forEach(a => {
+        const src = a.getAttribute('data-utm-source').toLowerCase().trim();
+        /* Preserve any hash fragments (#section) already on the href */
+        const hash = a.hash || '';
+        a.href = `${BASE}?utm_source=${encodeURIComponent(src)}${hash}`;
+      });
+
+      /* OPTIONAL: track clicks on CTAs as "generate_lead" */
+      document.querySelectorAll('[data-utm-source]').forEach(el => {
+        el.addEventListener('click', () => {
+          if (typeof gtag === 'function')
+            gtag('event', 'generate_lead', { event_category: 'cta', event_label: el.href });
+        });
+      });
+    })();
+    </script>
   </body>
 </html>
