Optimize page for SEO targeting 'HyroTrader discount code' keywords

--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ev Trades | Get Funded with HyroTrader</title>
-    <meta name="description" content="Get funded with HyroTrader. Save 5% instantly with code YKZAL6F. Join Ev Trades, a successful Forex trader with $50K+ in payouts." />
+    <title>HyroTrader Discount Code (2025) – Use Code YKZAL6F for 5% Off | EvTrades</title>
+    <meta name="description" content="Use HyroTrader discount code YKZAL6F to get 5% off any trading challenge. Trusted by funded traders with over $50,000+ in payouts." />
+    <meta name="keywords" content="HyroTrader discount code, HyroTrader coupon, prop firm discount, trading challenge promo, YKZAL6F" />
     <meta name="author" content="Ev Trades" />
 
-    <meta property="og:title" content="Ev Trades | Get Funded with HyroTrader" />
-    <meta property="og:description" content="Get funded with HyroTrader. Save 5% instantly with code YKZAL6F. Join Ev Trades, a successful Forex trader with $50K+ in payouts." />
+    <!-- Open Graph Tags for Social Media Sharing -->
+    <meta property="og:title" content="HyroTrader Discount Code (2025) – Use Code YKZAL6F for 5% Off | EvTrades" />
+    <meta property="og:description" content="Use HyroTrader discount code YKZAL6F to get 5% off any trading challenge. Trusted by funded traders with over $50,000+ in payouts." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://prop.evtrades.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ev_trades" />
+    <meta name="twitter:title" content="HyroTrader Discount Code YKZAL6F - 5% Off Any Challenge" />
+    <meta name="twitter:description" content="Use HyroTrader discount code YKZAL6F to get 5% off any trading challenge. Trusted by funded traders with over $50,000+ in payouts." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- GitHub Pages SPA redirect -->
@@ -58,6 +63,36 @@
           event_label: utmSource,
           utm_source: utmSource
         });
+      }
+    </script>
+
+    <!-- FAQ Schema Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [{
+          "@type": "Question",
+          "name": "What is the HyroTrader discount code?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "The HyroTrader discount code is YKZAL6F. Using this code will give you 5% off any trading challenge at HyroTrader. This code has been verified and is active in 2025."
+          }
+        }, {
+          "@type": "Question",
+          "name": "How do I use HyroTrader code YKZAL6F?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "To use the HyroTrader discount code YKZAL6F, simply enter it at checkout when purchasing any trading challenge. The 5% discount will be applied automatically to your order."
+          }
+        }, {
+          "@type": "Question",
+          "name": "Who is Ev Trades?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ev Trades is a successful Forex trader with over $50,000 in payouts from prop firms, more than 14,000 followers on X (Twitter), and 5+ years of trading experience. He provides this exclusive HyroTrader discount code to help other traders get funded."
+          }
+        }]
       }
     </script>
   </head>
