--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
     <meta property="og:title" content="HyroTrader Discount Code (2025) – Use Code YKZAL6F for 5% Off | EvTrades" />
     <meta property="og:description" content="Use HyroTrader discount code YKZAL6F to get 5% off any trading challenge. Trusted by funded traders with over $50,000+ in payouts." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/gra.png" />
     <meta property="og:url" content="https://prop.evtrades.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ev_trades" />
     <meta name="twitter:title" content="HyroTrader Discount Code YKZAL6F - 5% Off Any Challenge" />
     <meta name="twitter:description" content="Use HyroTrader discount code YKZAL6F to get 5% off any trading challenge. Trusted by funded traders with over $50,000+ in payouts." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/gra.png" />
+    
+    <!-- Adding the missing itemprop="image" meta tag -->
+    <meta itemprop="image" content="/gra.png" />
     
     <!-- GitHub Pages SPA redirect -->
     <script type="text/javascript">
